--- a/knives-master.css
+++ b/knives-master.css
@@ -1,7 +1,7 @@
 #header-img{
-  width: 80px;
-  height: 60px;
-  padding-left: 15px;
+  width: 175px;
+  height: 100px;
+
 }
 #header {
     position:relative;
@@ -9,11 +9,15 @@
     max-width:100%;
     height:100%;
     margin:0 auto;
-    padding:1rem 5rem;
-    background: linear-gradient(red,       yellow, black);
-    color: black;
-    font-size: 30px;
-  font-weight: bold;
+    padding:2rem 5rem;
+    background: linear-gradient(90deg, black, gray, white);
+    color:#fff;
+  font-size: 20px;
+}
+header h1 {
+    line-height: 45px;
+    font-size: 2rem;
+    margin: 0;
 }
 #nav-bar {
     padding-left: 0;
@@ -21,11 +25,22 @@
     list-style: none;
     float:right;
 }
-nav li {
+
+nav  li {
     position:relative;
     display:inline-block;
     list-style-type: none;
     font-family: "Open Sans", "Droid Sans", Helvetica, Arial, sans-serif;
     color: #222;
     padding:0 1rem;
+}
+h2{
+  text-align: center;
+  font-size: 20px
+}
+input{
+  height: 30px;
+  width: 300px;
+  font-size: 20px;
+  text-align: center;
 }
