--- a/knives-master.css
+++ b/knives-master.css
@@ -44,3 +44,29 @@ input{
   font-size: 20px;
   text-align: center;
 }
+#best-quality{
+  height: 75px;
+  width: 75px;
+  float: left;
+  padding-right: 20px;
+  padding-left: 250px;
+}
+#shipping{
+  height: 75px;
+  width: 75px;
+  float: left;
+  padding-right: 20px;
+  padding-left: 250px;
+}
+#quality{
+  height: 75px;
+  width: 75px;
+  float: left;
+  padding-right: 20px;
+  padding-left: 250px;
+}
+#video{
+  width: 853px;
+  height: 480px;
+  padding-left: 300px;
+}
