--- a/knivesmaster.css
+++ b/knivesmaster.css
@@ -3,6 +3,11 @@
   height: 100px;
   display: flex;
 }
+  @media only screen and (max-width: 350px) {
+body{
+    background-color: lightblue;
+}
+}
 #header {
     position:relative;
     display:block;
@@ -13,7 +18,7 @@
     background: linear-gradient(90deg, black, gray, white);
     color: white;
   font-size: 25px;
-}
+  }
 header h1 {
     line-height: 45px;
     font-size: 2rem;
@@ -125,6 +130,6 @@ input{
   text-align: left;
 }
 .button{
-  height: 75px;
-  width: 100px;
+  height: 150px;
+  width: 200px;
 }
