--- a/personal-master.css
+++ b/personal-master.css
@@ -20,3 +20,11 @@
 #welcome-section{
   background-color: black;
 }
+#projects{
+  background-color: darkred;
+}
+.codepen{
+  display: grid;
+  grid-column-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1 fr))
+}
