--- a/personal-master.css
+++ b/personal-master.css
@@ -46,3 +46,15 @@
 #welcome-section {
   height: 100vh;
 }
+#contact-link{
+  color: white;
+}
+.contact-section-header{
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+}
+.contact-image{
+  height: 75px;
+  width: 75px;
+}
